# .dots-flakes

./: README.md  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa
.direnv/flake-inputs/: 0cwqjv472ib82mqja4s9nk17pbln4x6q-source  55kb57r4iqd76jzadpy7kh5c2zpzjsxf-source  aixcyan2bzfxzps41r79wna1z64j9cyc-source  zilpk7jn48mavdnjq0gsjx400y55n2bd-source
home-manager/danielgm/: yonaguni.nix
home/danielgm/: inkdrop.nix  newyork.nix  yonaguni.nix
home/la13/: beeworker1.nix  beeworker2.nix
home/medellin/: medellin.nix
home/neaYork/: config.nu  core.nix  default.nix  git.nix  kitty.nix
home/neayork/: core.nix  default.nix  git.nix  kitty.nix  newyork.nix  shell.nix  starship.nix
home/newyork/: newyork.nix
home/yonaguni/: yonaguni.nix
hosts/la13/: configuration.nix  hardware-configuration.nix
hosts/medellin/: configuration.nix  hardware-configuration.nix
hosts/neaYork/: configuration.nix
hosts/newYork/: configuration.nix  hardware-configuration.nix  ink.nix  (+1 more)
modules/firefox/homePage/: Dockerfile  app.py  autoconfig.cfg  pyproject.toml  shell.nix
modules/firefox/homePage/templates/: index.html  script.js  styles.css
scripts/: .xsession  dwmblocks  fehbg  fehbg.nix  liveWall.nix  lock-screen.nix  restart_dwm  screenshot.sh  screenshotsel.nix  screenshotsel.sh  wallpaper.nix
services/: analytics.nix  arr.nix  cloudbeaver.nix  default.nix  docmost.nix  hoarder.nix  immich.nix  joplin.nix  lobe-chat.nix  loki.yaml  mysql.nix  ollama.nix  openMetadata-compose.nix  plex.nix  postgresql.nix  promtail.yaml
wallpapers/: opjpg
(+173 files in other folders)
