[tool.poetry]
name = "homepage"
version = "0.1.0"
description = ""
authors = ["Captain Kranch <notmyemail@ye.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask-htmx = "^0.3.1"
flask = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
